# py-gitignore

./: LICENSE.rst  README.rst  pyproject.toml  setup.cfg
py_gitignore/: py_gitignore.py  template.py
