[metadata]
name = py-gitignore
version = attr: py_gitignore.__version__
url = https://github.com/bdista/py-gitignore/
project_urls =
    Source Code = https://github.com/bdista/py-gitignore/
license = MIT
license_files = LICENSE.rst
author = bdista
author_email = bdista <bdista@users.noreply.github.com>
description = cli to add gitignore file
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
package_dir = = py_gitignore
include_package_data = true
python_requires = >= 3.9

